--- a/alidamaj.css
+++ b/alidamaj.css
@@ -3,8 +3,8 @@ Using formula solid
 $primary: #FF0000;
 $home: #CDDDF3;
 $away: #ff0000;
-$cl: #F1F1F1;
-$base: #131921;
+$cl: #131921;
+$base: #f1f1f1;
 */
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&subset=latin,latin-ext");
 .sr-bb {
